# Atelier

./: .roomodes  LICENSE  README.md  Todo.md  boot.sh  check-ubuntu-version.sh  check-version.sh  essential-tools.sh  flatpak-setup.sh  install-pkg.sh  install.sh  menu.sh  pyproject.toml  recommended-config.json  refactoring_plan.md  requirements.txt  run.sh  setup.py  setupr-config.json  system-cleanup.sh  system-update.sh
dotfiles/: gitconfig  vimrc  zshrc
lib/: module-template.sh  utils.sh
modules/apps/: install-discord.sh  install-dropbox.sh  install-localsend.sh  install-notion.sh  install-obsidian.sh  install-postman.sh  install-spotify.sh  install-syncthing.sh  install-telegram.sh  install-todoist.sh  install-ulauncher.sh  install-vlc.sh  install-whatsapp.sh  install-xournal.sh  install-zoom.sh  menu.sh
modules/browsers/: install-brave.sh  install-chrome.sh  install-edge.sh  install-firefox.sh  install-opera.sh  install-vivaldi.sh  install-zen.sh  menu.sh
modules/cli/: install-ag.sh  install-bat.sh  install-exa.sh  install-fd.sh  install-fzf.sh  install-ghostty.sh  install-gum.sh  install-httpie.sh  install-jq.sh  install-lsd.sh  install-ncdu.sh  install-neovim.sh  install-ripgrep.sh  install-tig.sh  install-tmux.sh  install-tree.sh  install-zoxide.sh  menu.sh
modules/config/: configure-firewall.sh  configure-gnome.sh  configure-network.sh  configure-timezone.sh  configure-vscode-keyring.sh  create-config.sh  menu.sh  setup-dotfiles.sh
modules/containers/: install-docker-compose.sh  install-docker.sh  install-helm.sh  install-kubectl.sh  menu.sh  (+2 more)
(+54 files in other folders)
