[tool.poetry]
name = "setupr"
version = "0.1.0"
description = "A modern terminal UI for bulk installing Linux applications"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "setupr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.47.1"
distro = "^1.9.0"  # For Linux distribution detection
pkginfo = "^1.9.6"  # For package information
python-apt = {version = "^2.6.0", optional = true}  # For Debian-based systems

[tool.poetry.scripts]
setupr = "setupr.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
