[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setupr"
version = "0.1.0"
description = "A sleek, efficient terminal UI package manager for Linux systems"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kxvin", email = "example@example.com"}
]
dependencies = [
    "textual>=0.27.0",
    "rich>=13.0.0",
    "distro>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
setupr = "setupr.main:run"

[tool.setuptools]
package-dir = {"" = "src"}
